# component

./: README.md
Config/: language_config.json  log_config.json
Modules/Interface/include/: IModule.h  ModuleManager.h  TopicMessage.h
Modules/Translator/: CMakeLists.txt
Modules/Translator/include/: TranslatorModule.h
Modules/Translator/src/: TranslatorModule.cpp
docs/: AI编程技巧分享.pptx  gcc编译.txt  opencv编译.txt  模块化管理系统设计文档.docx
mainwindow/: AdapterManager.cpp  AdapterManager.h  IAdapter.h  TranslatorAdapter.cpp  TranslatorAdapter.h
